--- a/package.json
+++ b/package.json
@@ -15,31 +15,36 @@
   "devDependencies": {
     "cordova-android": "^13.0.0",
     "cordova-browser": "^7.0.0",
-    "cordova-ios": "^7.1.0",
+    "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-camera": "^7.0.0",
     "cordova-plugin-contacts": "^3.0.1",
+    "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-file": "^8.0.1",
     "cordova-plugin-geolocation": "^5.0.0",
     "cordova-plugin-media-capture": "^5.0.0",
-    "cordova-plugin-network-information": "^3.0.0"
+    "cordova-plugin-network-information": "^3.0.0",
+    "cordova.plugins.diagnostic": "github:dpa99c/cordova-diagnostic-plugin"
   },
   "cordova": {
     "platforms": [
       "android",
-      "ios",
       "browser"
     ],
     "plugins": {
-      "cordova-plugin-geolocation": {
-        "GPS_REQUIRED": "true"
-      },
+      "cordova-plugin-geolocation": {},
       "cordova-plugin-network-information": {},
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.6.+"
       },
       "cordova-plugin-media-capture": {},
       "cordova-plugin-contacts": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova.plugins.diagnostic": {
+        "ANDROIDX_VERSION": "1.0.0",
+        "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
+      },
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-device": {}
     }
   },
   "dependencies": {
