--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "esri-leaflet": "^3.0.12",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
+    "leaflet-makimarkers": "^3.1.0",
     "leaflet-rotatedmarker": "^0.2.0",
     "page": "^1.11.6"
   }
