--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-file": "^8.0.1",
+    "cordova-plugin-file-transfer": "^2.0.0",
     "cordova-plugin-geolocation": "^5.0.0",
+    "cordova-plugin-insomnia": "^4.3.0",
     "cordova-plugin-media-capture": "^5.0.0",
     "cordova-plugin-network-information": "^3.0.0",
     "cordova.plugins.diagnostic": "github:dpa99c/cordova-diagnostic-plugin"
@@ -46,13 +48,18 @@
         "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
       },
       "cordova-plugin-android-permissions": {},
-      "cordova-plugin-device": {}
+      "cordova-plugin-device": {},
+      "cordova-plugin-insomnia": {},
+      "cordova-plugin-file-transfer": {}
     }
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "esri-leaflet": "^3.0.12",
+    "fs-extra": "^11.2.0",
+    "gpx-parse": "^0.10.4",
     "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
     "leaflet-makimarkers": "^3.1.0",
